# SuperHAN

./: .gitignore  GPU.sh  README.md  commands.sh  demo.py  inference.py  output.out  pyproject.toml  superhan.sh  train.py
.claude/: settings.json
checkpoints/: training_log.csv
data/: augmentations.py  constants.py  freihand_dataset.py  hagrid_dataset.py
eval/: mediapipe_eval.py  metrics.py  visualize.py
losses/: losses.py
models/: discriminator.py  generator.py  hourglass.py
scripts/: smoke_test.py
train/: trainer.py
